Fixed sigfault in ibase_close(). Bug #15419 #15992 @- Fixed sigfault in ibase_close() if user doesn't free resultset @  (Bug #15419, #15992) (daniela)